<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="3dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardMaxElevation="2dp"
        card_view:cardElevation="2dp"
        android:paddingVertical="10dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/related_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitCenter"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/related_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/relate_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:singleLine="true" />

            <TextView
                android:id="@+id/related_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>