<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:cardElevation="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terra"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="1.0"
                    android:isIndicator="false"
                    android:progressTint="@color/gold"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/product_no_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/review"
                    android:textSize="12dp"
                    android:paddingHorizontal="5dp"/>

                <TextView
                    android:id="@+id/product_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"
                    android:text="@string/available_item"
                    android:gravity="right"/>


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>