<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    android:elevation="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/reviewer_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitCenter"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/reviewer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/albert"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    android:layout_gravity="top"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/reviewer_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="3"
                        android:stepSize="1.0"
                        android:isIndicator="true"
                        android:progressTint="@color/gold"
                        style="@style/Widget.AppCompat.RatingBar.Small"/>

                    <TextView
                        android:id="@+id/reviewer_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date"
                        android:gravity="right"
                        android:textSize="12sp"/>



                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/review_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:letterSpacing="0.1"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
